Initial Fixes: IP(in_addr), GTK2, GeoIP
Fixup autoconf to more modern standards
Add support for GeoIP lookups (off by default)
Compile against GTK2 insetad of GTK+
Use IP addresses instead of strings for IP addresses
This includes initial groundwork for IPv6 support
Also support netmasks in *network.cache files
So 192.168.0.1/22 will match the correct hosts.

Signed-off-by: Nathaniel Clark <Nathaniel.Clark@misrule.us>

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,8 @@
+/po/POTFILES
+/intl/po2tbl.sed
+/stamp-h1
 *.cache
+*.tmp
 .deps
 Makefile
 *.o
@@ -14,3 +18,5 @@ depcomp
 install-sh
 missing
 share/xtraceroute-resolve-location.sh
+xtraceroute
+TAGS
